--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app/server.js",
   "scripts": {
     "watch-server": "webpack -w --progress --config webpack.server.config.js",
-    "watch-client": "webpack -w --progress --config webpack.client.config.js",
+    "watch-client": "webpack-dev-server -w --progress --config webpack.client.config.js",
     "watch": "npm run watch-client & npm run watch-server",
-    "compile-server": "webpack --progress --config webpack.server.config.js",
-    "compile-client": "webpack --progress --config webpack.client.config.js",
+    "compile-server": "NODE_ENV=production webpack --progress --config webpack.server.config.js",
+    "compile-client": "NODE_ENV=production webpack --progress --config webpack.client.config.js",
     "build": "npm run compile-client && npm run compile-server",
     "post-install": "npm run build",
     "start": "node dist/server.js"
