--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compile-client": "NODE_ENV=production webpack --progress --config webpack.client.config.js",
     "build": "npm run compile-client && npm run compile-server",
     "post-install": "npm run build",
-    "start": "node dist/server.js"
+    "start": "DEBUG=express:* node dist/server.js"
   },
   "author": "",
   "license": "MIT",
